fix: update font size for nav links and set minimum height for main section on tablet

--- a/app/components/Header/Header.module.scss
+++ b/app/components/Header/Header.module.scss
@@ -112,7 +112,7 @@
 
 .navLink {
   color: $color-light;
-  font-size: $font-size-xs;
+  font-size: $font-size-md;
   text-decoration: none;
   transition: color 0.2s;
   font-weight: 400;
